Preserve item stats order